<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@mipmap/ic_work_white_24dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/novo_servico"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/lightBlue"
        android:theme="@style/FieldTheme">

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/nome_servico"
            android:inputType="textCapWords"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18dp"
            android:theme="@style/FieldTheme" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/lightBlue"
        android:theme="@style/FieldTheme">

        <EditText
            android:id="@+id/edit_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/descricao_servico"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18dp"
            android:theme="@style/FieldTheme" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/categoria_servico"
        android:textColor="@color/colorPrimary"
        android:textSize="12dp" />

    <Spinner
        android:id="@+id/spn_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/lightBlue"
        android:theme="@style/FieldTheme">

        <EditText
            android:id="@+id/edit_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/valor_servico"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18dp"
            android:theme="@style/FieldTheme" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>